Bug 474389.  Fix the 'set up editor after this load' setup, which hasn't really worked for a while, except for initial loads in the window.  r+sr=peterv